--- a/index.html
+++ b/index.html
@@ -1,67 +1,258 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>나만의 블로그</title>
-    <!-- Tailwind CSS CDN -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #f0f4f8;
-            color: #333;
-            line-height: 1.6;
-        }
-        .container {
-            max-width: 800px;
-            margin: auto;
-        }
-        .header-bg {
-            background-color: #3b82f6;
-            background-image: linear-gradient(135deg, #3b82f6 0%, #1d4ed8 100%);
-        }
-        .blog-card {
-            transition: transform 0.2s, box-shadow 0.2s;
-        }
-        .blog-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>나만의 블로그</title>
+  <!-- Tailwind CSS CDN -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+    body {
+      font-family: 'Inter', sans-serif;
+      background-color: #f0f4f8;
+      color: #333;
+      line-height: 1.6;
+    }
+    .container {
+      max-width: 800px;
+      margin: auto;
+    }
+    .header-bg {
+      background-color: #3b82f6;
+      background-image: linear-gradient(135deg, #3b82f6 0%, #1d4ed8 100%);
+    }
+    .blog-card {
+      transition: transform 0.2s, box-shadow 0.2s;
+    }
+    .blog-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+                  0 4px 6px -2px rgba(0, 0, 0, 0.05);
+    }
+  </style>
 </head>
 <body class="bg-gray-100">
 
-    <!-- 블로그 헤더 섹션 -->
-    <header class="header-bg text-white py-16 rounded-b-3xl text-center">
-        <div class="container px-4">
-            <h1 class="text-5xl font-bold tracking-tight">나만의 블로그</h1>
-            <p class="text-lg mt-3 opacity-90">당신의 생각, 경험, 그리고 이야기를 공유하세요.</p>
-        </div>
-    </header>
+  <!-- 블로그 헤더 -->
+  <header class="header-bg text-white py-16 rounded-b-3xl text-center">
+    <div class="container px-4">
+      <h1 class="text-5xl font-bold tracking-tight">나만의 블로그</h1>
+      <p class="text-lg mt-3 opacity-90">생각, 경험, 이야기를 자유롭게 공유하세요.</p>
+    </div>
+  </header>
 
-    <main class="container px-4 py-12 -mt-12">
-        <!-- 로그인/사용자 정보 섹션 -->
-        <section class="bg-white p-6 rounded-2xl shadow-lg mb-8 flex items-center justify-between">
-            <div id="auth-status" class="flex items-center space-x-2">
-                <span id="user-info" class="text-sm text-gray-600">익명 로그인 진행 중...</span>
-            </div>
-            <button id="auth-button" class="bg-blue-600 text-white font-medium py-2 px-4 rounded-full hover:bg-blue-700 transition-colors duration-200" disabled>로그인</button>
-        </section>
+  <main class="container px-4 py-12 -mt-12">
+    <!-- 로그인 상태 -->
+    <section class="bg-white p-6 rounded-2xl shadow-lg mb-8 flex items-center justify-between">
+      <div id="auth-status" class="flex items-center space-x-2">
+        <span id="user-info" class="text-sm text-gray-600">로그인 상태 확인 중...</span>
+      </div>
+      <button id="auth-button" class="bg-blue-600 text-white font-medium py-2 px-4 rounded-full hover:bg-blue-700 transition-colors duration-200">
+        로그인
+      </button>
+    </section>
 
-        <!-- 글쓰기 버튼 (로그인 시에만 보임) -->
-        <section id="write-post-section" class="bg-white p-6 rounded-2xl shadow-lg mb-8" style="display:none;">
-            <button id="new-post-btn" class="w-full bg-green-500 text-white font-bold py-3 px-4 rounded-full hover:bg-green-600 transition-colors duration-200">새 글 작성</button>
-        </section>
-        
-        <!-- 글쓰기 모달 (기본적으로 숨겨져 있음) -->
-        <div id="post-modal" class="fixed inset-0 bg-gray-900 bg-opacity-75 z-50 flex justify-center items-center p-4 hidden">
-            <div class="bg-white rounded-2xl shadow-xl w-full max-w-2xl p-6">
-                <h2 class="text-2xl font-bold mb-4" id="modal-title">새 글 작성</h2>
-                <form id="post-form">
-                    <input type="hidden" id="post-id">
-                    <div class="mb-4">
+    <!-- 글쓰기 버튼 -->
+    <section id="write-post-section" class="bg-white p-6 rounded-2xl shadow-lg mb-8" style="display:none;">
+      <button id="new-post-btn" class="w-full bg-green-500 text-white font-bold py-3 px-4 rounded-full hover:bg-green-600 transition-colors duration-200">
+        새 글 작성
+      </button>
+    </section>
+
+    <!-- 글쓰기 모달 -->
+    <div id="post-modal" class="fixed inset-0 bg-gray-900 bg-opacity-75 z-50 flex justify-center items-center p-4 hidden">
+      <div class="bg-white rounded-2xl shadow-xl w-full max-w-2xl p-6">
+        <h2 class="text-2xl font-bold mb-4" id="modal-title">새 글 작성</h2>
+        <form id="post-form">
+          <input type="hidden" id="post-id">
+          <div class="mb-4">
+            <label for="post-title" class="block text-gray-700 font-medium mb-1">제목</label>
+            <input type="text" id="post-title" class="w-full border-gray-300 rounded-lg shadow-sm focus:border-blue-500 focus:ring-blue-500" required>
+          </div>
+          <div class="mb-4">
+            <label for="post-content" class="block text-gray-700 font-medium mb-1">내용</label>
+            <textarea id="post-content" rows="6" class="w-full border-gray-300 rounded-lg shadow-sm focus:border-blue-500 focus:ring-blue-500" required></textarea>
+          </div>
+          <div class="flex justify-end space-x-2">
+            <button type="button" id="close-modal-btn" class="bg-gray-300 text-gray-800 font-medium py-2 px-4 rounded-full hover:bg-gray-400">취소</button>
+            <button type="submit" class="bg-blue-600 text-white font-medium py-2 px-4 rounded-full hover:bg-blue-700" id="save-post-btn">저장</button>
+          </div>
+        </form>
+      </div>
+    </div>
+
+    <!-- 게시물 목록 -->
+    <section id="blog-posts-list" class="grid grid-cols-1 gap-8"></section>
+  </main>
+
+  <!-- 푸터 -->
+  <footer class="bg-gray-800 text-white text-center py-6 rounded-t-3xl mt-12">
+    <p class="text-sm opacity-70">&copy; 2025 My Blog. All Rights Reserved.</p>
+  </footer>
+
+  <!-- Firebase SDK -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.6.0/firebase-app.js";
+    import { getAuth, signInAnonymously, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.6.0/firebase-auth.js";
+    import { getFirestore, collection, doc, onSnapshot, addDoc, updateDoc, deleteDoc, query, orderBy, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.6.0/firebase-firestore.js";
+
+    // ✅ Firebase 설정 (본인 프로젝트 값으로 변경)
+    const firebaseConfig = {
+      apiKey: "YOUR_API_KEY",
+      authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
+      projectId: "YOUR_PROJECT_ID",
+      storageBucket: "YOUR_PROJECT_ID.appspot.com",
+      messagingSenderId: "YOUR_SENDER_ID",
+      appId: "YOUR_APP_ID"
+    };
+
+    // Firebase 초기화
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+    const db = getFirestore(app);
+
+    // UI 요소
+    const authButton = document.getElementById('auth-button');
+    const userInfoSpan = document.getElementById('user-info');
+    const writePostSection = document.getElementById('write-post-section');
+    const newPostBtn = document.getElementById('new-post-btn');
+    const postModal = document.getElementById('post-modal');
+    const closeModalBtn = document.getElementById('close-modal-btn');
+    const postForm = document.getElementById('post-form');
+    const blogPostsList = document.getElementById('blog-posts-list');
+    const modalTitle = document.getElementById('modal-title');
+    const postIdInput = document.getElementById('post-id');
+
+    let userId = null;
+
+    // 로그인/로그아웃 버튼
+    authButton.addEventListener('click', async () => {
+      if (auth.currentUser) {
+        await signOut(auth);
+      } else {
+        try {
+          await signInAnonymously(auth);
+          console.log("익명 로그인 성공");
+        } catch (error) {
+          console.error("익명 로그인 실패:", error);
+        }
+      }
+    });
+
+    // 로그인 상태 감지
+    onAuthStateChanged(auth, (user) => {
+      if (user) {
+        userId = user.uid;
+        userInfoSpan.textContent = `로그인됨 (익명) - UID: ${userId}`;
+        authButton.textContent = "로그아웃";
+        writePostSection.style.display = "block";
+        loadPosts();
+      } else {
+        userId = null;
+        userInfoSpan.textContent = "로그아웃됨";
+        authButton.textContent = "로그인";
+        writePostSection.style.display = "none";
+        blogPostsList.innerHTML = '';
+      }
+    });
+
+    // 새 글 작성 버튼
+    newPostBtn.addEventListener('click', () => {
+      modalTitle.textContent = '새 글 작성';
+      postForm.reset();
+      postIdInput.value = '';
+      postModal.classList.remove('hidden');
+    });
+
+    // 모달 닫기
+    closeModalBtn.addEventListener('click', () => {
+      postModal.classList.add('hidden');
+    });
+
+    // 글 저장
+    postForm.addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const postId = postIdInput.value;
+      const title = document.getElementById('post-title').value;
+      const content = document.getElementById('post-content').value;
+
+      if (postId) {
+        const postRef = doc(db, `users/${userId}/blog_posts`, postId);
+        await updateDoc(postRef, { title, content });
+      } else {
+        await addDoc(collection(db, `users/${userId}/blog_posts`), {
+          title,
+          content,
+          authorId: userId,
+          createdAt: serverTimestamp()
+        });
+      }
+      postModal.classList.add('hidden');
+    });
+
+    // 게시물 불러오기
+    function loadPosts() {
+      if (!db || !userId) return;
+      const postsRef = collection(db, `users/${userId}/blog_posts`);
+      const q = query(postsRef, orderBy("createdAt", "desc"));
+
+      onSnapshot(q, (snapshot) => {
+        if (snapshot.empty) {
+          blogPostsList.innerHTML = '<p class="text-center text-gray-500">아직 글이 없습니다.</p>';
+        } else {
+          blogPostsList.innerHTML = '';
+          snapshot.forEach((docSnap) => {
+            const post = docSnap.data();
+            const postId = docSnap.id;
+            const date = post.createdAt ? new Date(post.createdAt.seconds * 1000).toLocaleDateString('ko-KR') : '날짜 없음';
+
+            const postElement = document.createElement('div');
+            postElement.className = 'bg-white p-8 rounded-2xl shadow-lg blog-card';
+            postElement.innerHTML = `
+              <h2 class="text-2xl font-semibold text-gray-800 mb-2">${post.title}</h2>
+              <p class="text-sm text-gray-500 mb-4">${date}</p>
+              <p class="text-gray-700 leading-relaxed mb-4">${post.content}</p>
+              <div class="flex space-x-2">
+                <button class="edit-btn text-blue-600 font-medium hover:underline" data-id="${postId}">수정</button>
+                <button class="delete-btn text-red-600 font-medium hover:underline" data-id="${postId}">삭제</button>
+              </div>
+            `;
+            blogPostsList.appendChild(postElement);
+          });
+
+          // 수정
+          document.querySelectorAll('.edit-btn').forEach(button => {
+            button.addEventListener('click', (e) => {
+              const postId = e.target.dataset.id;
+              const postElement = e.target.closest('.blog-card');
+              const title = postElement.querySelector('h2').textContent;
+              const content = postElement.querySelector('p:nth-of-type(2)').textContent;
+
+              postIdInput.value = postId;
+              document.getElementById('post-title').value = title;
+              document.getElementById('post-content').value = content;
+              modalTitle.textContent = '글 수정';
+              postModal.classList.remove('hidden');
+            });
+          });
+
+          // 삭제
+          document.querySelectorAll('.delete-btn').forEach(button => {
+            button.addEventListener('click', async (e) => {
+              const postId = e.target.dataset.id;
+              if (confirm('정말 삭제하시겠습니까?')) {
+                const postRef = doc(db, `users/${userId}/blog_posts`, postId);
+                await deleteDoc(postRef);
+              }
+            });
+          });
+        }
+      });
+    }
+  </script>
+</body>
+</html>                    <div class="mb-4">
                         <label for="post-title" class="block text-gray-700 font-medium mb-1">제목</label>
                         <input type="text" id="post-title" class="w-full border-gray-300 rounded-lg shadow-sm focus:border-blue-500 focus:ring-blue-500" required>
                     </div>
